--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -3,9 +3,15 @@
 @model Apartment.Pages.ManageUsersModel
 @{
     ViewData["Title"] = "User Management";
+    Layout = "_Layout";
 }
 
-<div class="container-fluid">
+<div class="d-flex">
+    @await Html.PartialAsync("_AdminSidebar")
+
+    <!-- Main Content -->
+    <div class="main-content" style="margin-left: 280px; width: calc(100% - 280px); padding: 2rem;">
+        <div class="container-fluid">
     <!-- Success/Error Messages -->
     @if (!string.IsNullOrEmpty(Model.SuccessMessage))
     {
@@ -271,6 +277,8 @@
                     <small>New Today</small>
                 </div>
             </div>
+        </div>
+    </div>
         </div>
     </div>
 </div>
